--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -17,7 +17,7 @@ run:
   - -exc
   - |
     ls -ltr
-    export GOPATH=
+    export GOPATH=$HOME/hello-go
     cd hello-go/src/cognizant.com/codeblue
     glide up
     pwd
