--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -18,7 +18,7 @@ run:
   - |
     ls -ltr
     go env
-    export GOPATH=$HOME/hello-go
+    export GOPATH=/go/hello-go
     cd hello-go/src/cognizant.com/codeblue
     glide up
     pwd
