--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -20,6 +20,7 @@ run:
     go env
     pwd
     export GOPATH=/tmp/build/617e262f/hello-go
+    go env
     cd hello-go/src/cognizant.com/codeblue
     gilde up
     pwd
