--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -22,7 +22,7 @@ run:
     export GOPATH=/tmp/build/617e262f/hello-go
     go env
     cd hello-go/src/cognizant.com/codeblue
-    apt-get install glide
+    sudo apt-get install glide
     pwd
     cd ..
     cd ..
