--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -19,7 +19,7 @@ run:
     ls -ltr
     go env
     pwd
-    export GOPATH=$PWD
+    export GOPATH=$PWD/name
     go env
     cd hello-go/src/cognizant.com/codeblue
     apt install glide
