--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -19,7 +19,7 @@ run:
     ls -ltr
     go env
     pwd
-    export GOPATH=/usr/local/go/hello-go
+    export GOPATH=$PWD
     go env
     cd hello-go/src/cognizant.com/codeblue
     apt install glide
