--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -18,7 +18,7 @@ run:
   - |
     ls -ltr
     apt-get update
-    apt install glide 
+    apt install golang-glide
     ls -ltr
     go env
     pwd
