--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -12,22 +12,4 @@ outputs:
 - name: coverage-results
 
 run:
-  path: sh
-  args:
-  - -exc
-  - |
-    ls -ltr
-    apt-get update
-    curl https://glide.sh/get | sh
-    ls -ltr
-    go env
-    pwd
-    export GOPATH=$PWD/hello-go
-    cd hello-go/src/cognizant.com/codeblue
-    glide up
-    pwd
-    cd ..
-    cd ..
-    echo "START TESTING"
-    go test cognizant.com/codeblue/test/
-    echo "TEST DONE"
+path: ./hello-go/ci/scripts/unit-tests.sh
