--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -12,4 +12,4 @@ outputs:
 - name: coverage-results
 
 run:
-  path: hello-go/src/cognizant.com/codeblue/ci/unit-test.sh
+  path: autopcftes/src/cognizant.com/codeblue/ci/unit-test.sh
