--- a/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
+++ b/src/cognizant.com/codeblue/ci/tasks/unit-test.yml
@@ -15,4 +15,4 @@ outputs:
 - name: coverage-results
 
 run:
-  path: sh "autopcftest/src/cognizant.com/codeblue/ci/scripts/unit-test.sh"
+  path: "autopcftest/src/cognizant.com/codeblue/ci/scripts/unit-test.sh"
